# vPasi

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/: __init__.py  main.py
backend/src/api/: research.py  routes.py
backend/src/core/: config.py  logging.py  security.py
backend/src/graph/: __init__.py  nodes.py  research.py  state.py
backend/src/interfaces/: ussd_handler.py  voice_handler.py  whatsapp_handler.py
backend/src/models/: __init__.py  database.py  research.py  session.py
backend/src/safety/: __init__.py  guards.py
backend/src/services/: africastalking.py  redis_store.py  vertex_ai.py
backend/tests/: test_webhooks.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AssistantMessage.tsx  ChatInput.tsx  ChatLayout.tsx  Citations.tsx  MessageList.tsx  Sidebar.tsx  ThinkingSection.tsx  UserMessage.tsx  WelcomeScreen.tsx
frontend/src/hooks/: useChat.ts  useSessions.ts
frontend/src/services/: streamingApi.ts
